--- a/src/App.css
+++ b/src/App.css
@@ -213,7 +213,13 @@
 }
 
 .card h3 {
+  display: flex;
+  align-items: center;
   margin: 0 0 8px 0;
+}
+
+.card-ether h3 {
+  margin-left: 22px;
 }
 
 .card-title {
@@ -228,6 +234,8 @@
 
 /* CardContent styles */
 .card-item {
+  display: flex;
+  align-items: center;
   margin-bottom: 8px;
   font-size: 14px;
   line-height: 1.4;
